--- a/MODULOS/ALUMNOS/Alumnos_form.resx
+++ b/MODULOS/ALUMNOS/Alumnos_form.resx
@@ -120,11 +120,14 @@
   <metadata name="MenuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>238, 17</value>
   </metadata>
+  <metadata name="MenuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>238, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="ToolStripMenuItem2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wAAADsABataJCQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAABXzSURBVHhe7d3b
+        vwAADr8BOAVTJAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAABXzSURBVHhe7d3b
         r+V1ecdxBpjhptILEBRMo3JlSJqqiRZQkEpa2ybGP8ATCU0AAQ9JORhNDBVLtKBeaGITwsHDRW97Z6Nt
         kRq9qY3UFsRGipVSAZGo1QQY+vmu9TXEOuLA7P08a63f65U8yXbPnr32/hnzeeMwM8cB2+Ppp58+LfeW
         3LW5W3P/lPuP3EO5H+f223iN8VrjNcdrj69hfC3ja3rh/DIBgGORUT0+9we5T+buzh3ObarxtX0z94nc
@@ -224,10 +227,13 @@
   <metadata name="MenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>123, 17</value>
   </metadata>
+  <metadata name="MenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>123, 17</value>
+  </metadata>
   <data name="ToolStripMenuItem1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wAAADsABataJCQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAADRSSURBVHhe7d0J
+        vwAADr8BOAVTJAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAADRSSURBVHhe7d0J
         nF1lff9x2fdNZZU/iKIIBv4KWKwbtYIbdSkVqVKwFcGKVmrb/x93o1JLpS5g1VJFlNq/JWBtTDJz7rmD
         4wougyEZzjk3xBggYQskhLBl//1/z+QXmJzzJJm5c+fOfZ7zeb9e39cAIpnfuc/vOc859yxPAwAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -762,6 +768,158 @@
         Bv4/qcXgM5fh9tIAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="Restarurar_alumno.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 54</value>
+  </metadata>
+  <data name="RestaurarToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAgqElEQVR4Xu3dC/R1dV3ncbmIFxARNW+JTma0cDLFS15SRiE0TStNy8ugpuFYqWma5j1LvMBkJbgA
+        Nc1sbMwwM8fKsqksGwVvSDkKZpoJAgEKogjMfL7r0fSRL8/zv5zLb5/zeq/1WqtlCv+zf/v89j7n7P3b
+        15AkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIk
+        SZIkSZJGbL84OO4ZD47HxTPipXFsnPR1b4i3fF3939/4z+u/U//d+t/U/7b+GfeI+mfuG5IkaUnVQf5u
+        cXS8Iuog/v74Qvy/Oat/R/276t/58qi/of6W+pskSdKM2j+OjBfGKXFmXBndwXmZroj62/4w6m+tv/l6
+        IUmSNtB3xCPjhPhwXB7dAXcK6m//UBwfj4gbhyRJSnvFneJZ8d6oT9LdwXQV1Gs7NV4WR8Q1Q5KktWnv
+        uF+8Ls6P7mC5Ds6L10b9XFDbRJKklWvPODxOjjrwdQfEdXZunBj3idpWkiRNuptFfb1/VnQHPq7qs1E/
+        ExwUkiRNpvoE+4B4e3wtuoMcu1fb7o/ih2OPkCRpyK4VR8UZ0R3Q2LpPxlPjOiFJ0hDdKOre93OiO3gx
+        O2fH8+KGIUnSUqqFbur3/QujO1gxP1+Kuk7gBiFJ0kKqZW/rwH9BdAcnFueLUScC1w9JkuZS3av+5HAb
+        33jqNsKfC+sJSJJmWt3D/9HoDj6M4+NRd2BIkrStvif+JLqDDeOqWzC/OyRJ2lT1VXLddnZxdAcYxvfl
+        eFHsE5Ik7bY7xAeiO6gwPR+Ju4QkSW3XjmNjyo/gpVerCr48arEmSZL+o0Oinl3fHTxYHR+L24ckac2r
+        NeaPjkuiO2Cwei6Nur7D8wUkaU2rJXzfFd1BgtVXd3ccGJKkNeqO8c/RHRhYH5+Ju4YkaQ2qJ/bVLWLd
+        AYH1Uz8JPCEkSSta3Q9+cnQHATghrhmSpBXqgHhPdBM/fMNfhAcLSdKKdOs4I7oJH75d3Sp4q5AkTbha
+        Ae7s6CZ6uDr/FncOSdIEOyzqefHdBA+7U8+BOCIkSROqHgnrSn+26yvxoyFJmkAPjpq4uwkdNuur8RMh
+        SRq4R4eH+TBr9TChR4YkacAeEjVRdxM4bFedWD48JEkDdb/wtT/zVj8HPDAkSQN036jlXLsJG2atLi69
+        T0iSlljd51+3a3UTNcxL3V56aEiSllCt8Pf56CZomLdaLOigkCQtsP3jo9FNzLAotcR0PWdCkrSA6olt
+        745uQoZF+6uoJ01KkuacR/oymuNDkjTH/mt0EzAs2+NCkjSH7hjW92dUdSvqnUKSNMMOjE9FN/HCKD4d
+        NwpJ0gzaI94V3YQLo/njqH1WkrTNnhrdRAujelJIkrbRIeF3f6amrgf4vpAkbaFrxYejm2BhdB8M6wNI
+        0hY6NrqJFabipSFJ2kR3CM/2Z+pqH3ZroCRtsL2jvj7tJlSYmvoZq5avliTtpudEN5HCVD0zJEm76LZR
+        V1B3kyhM1SXxXSFJupreGd0EClP3tpAkNR0R3cQJq+LIkCR9S3Xh3+nRTZqwKs6I2tclSV/vKdFNmLBq
+        LBMsSV9v/zgvuskSVs0XYr+QpLXvBdFNlLCqfjkkaa07IP49ukkSVtUFUfu+JK1tvxbdBAmr7kUhSWvZ
+        jeKL0U2OsOoujANDktau+gTUTYywLp4bkrRW1bP+z45uUoR1cU5cOyRpbXpidBMirJvHhyStRXvEP0Y3
+        GcK6+XjsGZK08j0wuokQ1tX9Q5JWvrdHNwnCujolJGmlu1l8LbpJENZVvSduHpK0sj0vugkQ1t2zQ5JW
+        srr478zoJj9Yd2eFiwElrWSHRzfxATscFpK0cr0mukkP2OHVIUkr1d5Rz0HvJj1gh3qP1HtFklamus+5
+        m/CAnR0RkrQy/XZ0kx2ws5NDklaiveL86CY7YGfnhrsBJK1E94huogN6dw1Jmny/Gt0kB/ReGJI0+U6N
+        bpIDeu8LSZp0N44ropvkgN7lccOQpMn2yOgmOGDXHh6SNNlqZbNucgN27bdCkibbR6Kb3IBdOy0kaZLt
+        H/VbZje5AbtW753rhSRNrvtFN7EBG2NZYEmTrO5l7iY1YGOeH5I0ud4W3aQGbMxbQ5Im11nRTWrAxnwi
+        JGlS1cVLV0Y3qQEbU4to7RuSNJk8AAhmw4OBJE2qo6ObzIDNeXxI0mR6RXSTGbA5x4QkTaY/iG4yAzbn
+        zSFJk+kD0U1mwOb8Q0jSZDo3uskM2JyzQ5ImUd0C2E1kwNa4FVDSJDo4ukkM2JrbhiQN3z2jm8SArblb
+        SNLw/Wh0kxiwNT8SkjR8tXBJN4kBW/PYkKTh+6XoJjFga34xJGn4XhrdJAZszUtCkobvldFNYsDWHBeS
+        NHwnRDeJAVvzqpCk4XtNdJMYsDUnhSQN3+9EN4kBW/OGkKThq6eXdZMYsDWeCChpEjkBgNlyAiBpEvkJ
+        AGbLTwCSJpGLAGG2XAQoaRK5DRBmy22AkiaRhYBgtiwEJGkSWQoYZstSwJIm0TOjm8SArXl6SNLwPS66
+        SQzYmqNCkobvwdFNYsDWPDAkafjuEd0kBmzND4QkDd/B0U1iwNbcNiRp+PaNbhIDNu/KuG5I0iQ6N7rJ
+        DNics0OSJtP7o5vMgM15X0jSZHpLdJMZsDn/IyRpMr0iuskM2JxjQpIm089EN5kBm/PTIUmT6W7RTWbA
+        5tw5JGky1a2AV0Q3oQEbc3m4BVDS5PpkdJMasDEfD0maXKdEN6kBG1N300jS5HphdJMasDHPD0maXD8U
+        3aQGbMx9Q5Im1/WiLmLqJjZg174W+4UkTbIPRTe5Abv2gZCkyXZ8dJMbsGuvDEmabI+IbnIDdu1hIUmT
+        7UZhQSDYnLp25oYhSZPOo4Fhc/4+JGnyvTi6SQ7ovSAkafLdPbpJDujdJSRp8u0V50U30QE7+0LsGZK0
+        Er02uskO2NmJIUkr05HRTXbAzu4TkrQy7R3nRDfhATt8PuonM0laqeqrzW7SA3Z4VUjSylVfbXaTHrDD
+        vUKSVq494szoJj5Yd/XeqPeIJK1kz41u8oN196yQpJXtpnFZdBMgrKt69v/NQpJWurdHNwnCuvrDkKSV
+        7wHRTYKwru4fkrTy1YVOZ0Q3EcK6OT1c/CdpbXpCdJMhrJvHhiStTdeKWvWsmxBhXZwd1w5JWqueH92k
+        COvi2SFJa9cN46LoJkZYdRfEASFJa9mLo5scYdXVN2CStLZdP86PboKEVXVe7B+StNY9L7pJElaVZX8l
+        KV0vzo1uooRVc07sG5Kk9HPRTZawao4OSdLX2ys+Gt2ECaviw1H7uiTpW7pvdJMmrIojQpLU5EmBrKo/
+        CEnS1XSb+HJ0EyhM1cVx65Ak7aJaHrWbRGGqnh6SpN20d5wa3UQKU/P+cOGfJG2w74/LoptQYSq+FncM
+        SdImenl0kypMxUtCkrTJrhUfim5ihdGdFvuEJGkLHRLuCmBqLonvDUnSNvr56CZZGNXPhCRpm+0R74hu
+        ooXRnBKSpBl1gzgrugkXRvHJOCAkSTOsbg2s31a7iReWra5VccufJM2pR0U3+cKyPSYkSXPs1dFNwLAs
+        vxGSpDl3zfiz6CZiWLR3RS1fLUlaQNeLj0Q3IcOinB7XD0nSArtFfDa6iRnm7XNxy5AkLaFD44vRTdAw
+        LxdF3ZUiSVpi94yLo5uoYdbqdr/DQpI0QD8UX4luwoZZ+Wo8ICRJA/VjUc9f7yZu2K7L42EhSRqwR4aT
+        AGat9qmfCknSwD0oLo1uIofNqq/9HxKSpAl0/6iLtboJHTaqnj1xv5AkTaj/Em4RZKvqVr97hSRpgt0+
+        PhPdBA9Xpxb5qTUmJEkT7ubxwegmevh2Hw0r/EnSirRfvDO6CR++4c9j/5AkrVD1FMHjo5v44TfDU/0k
+        aYV7VNTV3d1BgPVTt4w+NiRJa1A9yOWs6A4IrI9PRl0oKklaow6MP47uwMDqOyUOCEnSmnZUeJrg+qgF
+        op4akiRd43vjtOgOGKyOU+PgkCTpP9onXhoeJrR6LouXRI2xJEltdVHY+6M7kDA9H4o7hyRJu63uB6/f
+        ib8U3UGF8dVv/c+KvUKSpE31XfG26A4wjOutceuQJGlb3Sc+HN3BhnH8Y3h8ryRpptVXyU+KL0R38GF5
+        zoknhq/7JUlza9+o6wPqoNMdjFic8+NF4QE+kqSFVU8YrIvMLoju4MT8fDFeFlbykyQtrVpS+Lnx+egO
+        VszOv8UvhwO/JGmYapGZWlb49OgOXmzdJ6J+drlOSJI0ZHvE/aNuH7Sq4NbV6n31wJ66qr+2qSRJk+mm
+        UdcJ1GNnu4McV1Wf9uvCvluGJEmTrj7BHhavDncPXNXZcXzcK3zalyStZHWv+hFxcpwb3QFxHdR6CifF
+        fcP9+5KktWrPuFPUzwTvjvrduztYroIroh7HW7fv1QlQPW9BkiSlG8bD4zfjtJjyRYT1t9cBv17Lw6Ju
+        l5QkSRuoFhuqT8vPj3rATV0gV5+kuwPuMtXfVH/bH0T9rYdH/e2SJGlGXTfuEk+Il8ab4x+iLqTrDs6z
+        VP+O90X9O+vf/fiov6X+JkmStKTqQPw9cff4kXhMPD2Oifrt/cSoC+9eH2/5uvq/6z+r/1/9d14S9b+p
+        /239M+qfdduwCI8kSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIk
+        SZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIk
+        SZIkSZIkSZIkSZIkSZIkSZKkJbR33CQOiXvFj8Xj45fiBfGyrzshToqT4y3MVW3n8qr4xvZ/bjwrnhA1
+        Rj8Y3xs3jj1CkqSdOjAOjYfGL0YdVN4RH4sL4v8xeVfEF+KM+JOoMX5a1InC7eN6IUla0WqSv1scHcfH
+        34QDPN9QJwjvjfomp/aRu8Z1Q5I0oa4d9XX9s+OUOCuujG7ih6tzefxT/H7Uzwt3iT1DkjRI9Rt9fZ17
+        XPx9fDW6CR2261NR3xA4EZCkJbRPHB7HRv1W303UME/vibrAUJI0524d/y3eHl+KblKGRfpwXD8kSTPu
+        tlG3d30kugkYlu2NIUmaQQfFU6OuyHbhHlNw55AkbaEbxJPj/dFNsDAy3wJI0ia7d/xuXBrdxApTcH64
+        K0CSdlN92q/bqD4a3WQKU/SfQpLU9H3x+vhKdBMoTNlhIUn6ln4o/jRc0McqOyIkae27ZjwsXNTHurhD
+        SNLaVgf++n3/M9FNkrCK6mmDFgSStJbtFY+JeuhON0HCKqsVASVprapbn+qr/o9HNzHCOnheSNLadP84
+        PboJEdZFrWHxnSFJK9/B8c7oJkNYN/VESkla6Q6Il4X7+GGHT8Z+IUkrWV3g96Q4N7pJENbReXG7kKSV
+        7PvjA9FNgLCuPheHhiStXNeOY+Ky6CZAWFd/GzcPSVq5fjD+KbrJD9ZVLWX9m1GLXUnSSlUrmZ0Y1uyH
+        nZ0TR4YkrVx3izOjm/xgnf1V+Mpf0sq1d/xqXB7d5Afrqt4TL4y6C0aSVqpbx3ujm/xgnX0pHhyStHId
+        FTXJdZMfrLPPxh1Dklaqur3vddFNfLDu3hc3CUlaqQ6K90c38cG6+59xnZCkleqH4/zoJj5YZ3Xb6/Nj
+        j5CklakmtWfFFdFNfrDO6uD/5JCklaqeUvb26CY+WHe1zPUjQpJWqpvFqdFNfLDuvhoPCUlaqeoRpZ+O
+        buKDdXdxWNZX0sp1eFwY3cQH6+6CuEdI0kr12PD4XuhdEvcMSVqpnhPdpAdc4xqXxn1DklaqF0U36QE7
+        Hurz0JCklanu8f/16CY9YMd9/o8LSVqZ9ozXRDfpATv8QkjSylTP8P+96CY8YIfnheZbfQt5+3hqvCk+
+        EF+IutWyxuDf4zPxl3FC1MJLHrYkbbG94vfj2yc74JveGJpft4i69uis6Lb/rtSy5O+JeiT5PiFpA9XZ
+        9uuje1MBO/xdXCs0+24aJ8ZXotv2m1XfDjwp6oONpF10fHRvImCHWgHzO0KzrT58/GzMa5GxD8adQlLT
+        y6N74wA7fDG+LzTbbhB/FN02n6V6PsNTQtK39MLo3jDADvW78oNDs60eKvaR6Lb5vNTFgnWXk7T2/Xx0
+        bxLgm54bmm11od8/R7e9560u4qyfHaS1rT7R1Cpm3RsE2OHPwyfG2VZf+38suu29KMeFtJYdGl+K7o0B
+        7HBO1NfUml31yfuU6Lb3oj0qpLXqVvH56N4QwA71u/8RodlWV/t323sZLoqDQlqL9o9FX3QDU/RrodlW
+        q/RdEN32Xpb6NkJa+WqJ37+I7k0AfNPfRr1fNNtqkZ9uey/bYSGtdJ7sB7vna+H5VFf9z2qFv1l7d0gr
+        209Ft+MDOzs6NPtqbf9ue4/iP4e0ctXqZd94ehZw9f4q3B8++2qbnhndNh/FMSGtVNeLf4puhwe+6ZL4
+        7tDsq0f6dtt8JGeEtDKNdL8tjO5pofn0C9Ft89HcPKSV6NnR7eTAzt4XHhk7v94U3XYfzYNCmnx3jsui
+        28mBb6qnxN0uNL8+EN22H80zQpp0+8b/jW4HB3ZWt8dqvp0d3bYfzW+FNOleE93ODezs/DgwNN/qAstu
+        +4/m9SFNth+PbscGrqrWpdf8uzK67T+at4Q0yeoK1nOj27GBnf1jWO53MXXbf0ROADTZ/ld0OzVwVfcL
+        LaZu+4/ICYAmWT3Xutuhgat6R2hxdWMwIicAmlw3Cl/9w8bUc/4PCS2ubhxG5ARAk2sqi2zACN4cWmzd
+        OIzICYAm1f2j25GBq6qr0evhWFps3ViMyAmAJlMt+HNWdDsycFUm+OXUjcWI7B+aTMdFtxMDV+XT//Lq
+        xmNETgA0iW4TX4luJwau6q2h5dSNx4icAGgS1W1M3Q4MXFV9+v/+0HLqxmRETgA0fEdGt/MCvVokS8ur
+        G5MROQHQ0NXSpadHt/MCvQeEllc3JiNyAqChe3J0Oy7QOzP2DC2vblxG5ARAw3ZAnBfdjgv0fjG03Lpx
+        GZETAA3bi6PbaYFePYfe8/6XXzc2I3ICoCG7YVwU3U4L9E4KLb9ubEbkBEBD9vLodljg6h0aWn7d2IzI
+        CYCG6yZxcXQ7LND7P6Ex6sZnRE4ANFyvjG5nBa7eU0Jj1I3PiJwAaKhuEZdGt7MCvcvjpqEx6sZoRE4A
+        NFT/PbodFbh6fxYap26MRuQEQMO0f1wY3Y4KXL3HhMapG6MROQHQMD0jup0UuHr1k9n1Q+PUjdOInABo
+        iGrN/3+JbicFrp5JfLy6cRqRfUdD9MjodlBg1x4aGqtunEbkBEBDdFp0Oyhw9S4LX/+PVzdWI3ICoKV3
+        WHQ7J7Br/zs0Xt1YjcgJgJbem6PbOYFde1ZovLqxGpETAC21euiPhX9ga24fGq9urEbkBEBL7WnR7ZjA
+        rv1b7BEar268RuQEQEvtY9HtmMCuvTY0Zt14jcgJgJbWPaPbKYHd+4nQmHXjNSInAFpavxPdTgnsXj02
+        W2PWjdeInABoKe0Xl0S3UwK7dmZo3LoxG5ETAC0lK//B1v1uaNy6MRuREwAtpT+KbocEdu9nQ+PWjdmI
+        nABo4dVjf937D1t3aGjcujEbkRMALbyjotsZgd2ra2fq6Zkat27cRuQEQAvvT6LbGYHds/7/+HXjNiIn
+        AFpoB8RXo9sZgd07NjR23biNyAmAFtqjo9sRgY15XGjsunEbkRMALbTfi25HBDbm7qGx68ZtRE4AtLD2
+        jHOj2xGBjTkwVrV6uFE94fCp8ab4QHwhLo5uW7Be/j0+E38ZJ8QjwoqYE+kHohtUYGPOiVXsFvGiOCu6
+        1w1X54p4T9TdZfuEBu2F0Q0gsDF/HavUTePE+Ep0rxc2o74deFLsFRqsf4hu0ICNOTlWofqqv1YzvDC6
+        1wnb8cG4U2iQbhSXRzdYwMY8PabeDcJS4Mxb3W7+lNAA/WR0gwRs3INjytVv/R+L7rXBPNTFgnUBupbY
+        b0U3OMDG3SWmWh38/zm61wXz9Maon520pE6LbmCAjbtlTLH62t8nf5bpuNAS2i++Ft2gABtzZUzxNqf6
+        5HVKdK8JFulRoQV3eHSDAWzc+THF6mr/7vXAol0UB4UWmPv/YfvqK/SpVau0XRDd64FlqG+jtMD+NLqB
+        ADaulj+dWrXIT/daYJkOCy2g+v3PYh+wffUgrSlVV/1b4Y8RvTu0gG4T3QAAm1O30k6pWtu/ex0wgkNC
+        c+4h0W18YHNeHlOpvvk7M7rXASM4JjTnXAAIs/ErMZXqkb7da4BRnBGac2+NbuMDm/OcmEq/EN1rgJHc
+        PDTHPhHdhgc2Z0oPAnpTdK8BRvKg0JzaN66IbsMDm1ML6kylU6N7DTCSZ4Tm1F2j2+jA5j0+ptLZ0b0G
+        GMnU7qyZVI+ObqMDmzeldcwvie41wEheH5pTz4tuowOb9/CYSpdH9xpgJG8OzanXRbfRgc17REyleuhK
+        9xpgJCeH5lStXd5tdGDzjoqp9C/RvQYYyStCc+pT0W10YPN+OqbSe6J7DTCSo0NzaK+4LLqNDmzelCar
+        E6J7DTCSe4fm0K2i2+DA1tTqelOprlfoXgOMop5UeZ3QHLpXdBsd2JoXxFS6SVgEjJHVNWqaU54CCLM1
+        tQuWXAfAyPz+P8eeEN1GB7bmxJhSdddC9zpg2b4cNwjNqWdHt+GBrfn9mFL7xGeiey2wTL8RmmPHRrfh
+        ga2Z4m+WT4rutcCyXBy3CM2xWmO52/jA1pweU6tuB/5gdK8HlqG+ndac++PoNj6wNefEFLtTfDW61wSL
+        dFrUT1Oac38X3QAAW1MP2KlP1FPsKdG9JliUC+M2oQX00egGAdi674ypVhdeda8J5q1WpT0ytKA+Ht1A
+        AFv3gzHV9ow3Rve6YF7q56eHhhaYBwHB7D0qptwe4Q4hFqW+9j88tOA+F92AAFv3nFiFfjwuiO41wizU
+        3SffHVpC50Y3KMDWvS5WpYPilOheJ2xV3edft/q52n+JXRTd4ABbV3fXrFqHxbuje72wUZdEXWhqkZ8B
+        qkctdoMEbN15saodEsfEGdG9dvh2l0atkFkP9rG2/0B5FCjMx41j1btpPCieGa+KWln0LRPSjduIPhvd
+        3z+qk6KeivnEuHd4nv+g1X2X3Q4HbE9NfBq7btxGVAdVaebVhRjdDgdsT62qp7Hrxm1ETgA0l86PbocD
+        tqe+DtfYdeM2IicAmkufjm6HA7bnw6Gx68ZtRE4ANJdOjW6HA7anrq+5dmjcunEbkRMAzaU/i26HA7Zv
+        ys8EWIe6MRuREwDNJQ/9gPl5XmjcujEbkRMAzaUXR7fDAdv356Fx68ZsRE4ANJceH90OB2xfLXtqrfNx
+        68ZsRE4ANJdqfe9uhwNm4+6hMevGa0ROADSXDoxuhwNmo554pjHrxmtETgA0t/41up0O2L53hcasG68R
+        OQHQ3HpndDsdsH1fjL1D49WN14icAGhu1a1K3U4HzMY9Q+PVjdWInABobt03up0OmI1jQ+PVjdWInABo
+        bu0bHgsM83NWaLy6sRqREwDNtb+ObscDZuMOobHqxmlETgA01+pWpW7HA2bjV0Jj1Y3TiJwAaK7dProd
+        D5iN00Nj1Y3TiJwAaO59IrqdD5iNg0Pj1I3RiJwAaO79WnQ7HzAbVgUcq26MRuQEQHPPzwAwX6eGxqkb
+        oxE5AdBCqgmq2wGB2bhjaIy68RmREwAtpCdGtwMCs3F8aIy68RmREwAtpP2j1i7vdkJg+y6M64aWXzc+
+        I3ICoIX1yuh2QmA2HhNaft3YjMgJgBbWreJr0e2IwPa9N7T8urEZkRMALbTfi25HBGbjdqHl1o3LiJwA
+        aKHdNnwLAPNTP7VpuXXjMiInAFp4b4huZwS27/yoJ3FqeXXjMiInAFp4t45Lo9shge17Wmh5dWMyIicA
+        WkqWB4b5+de4Vmg5dWMyIicAWkr7xeei2ymB7fuZ0HLqxmNETgC0tH4iup0S2L6zYu/Q4uvGY0ROALTU
+        ToluxwS276dCi68bixE5AdBSu3nUVcvdzglsz0dij9Bi68ZiRE4AtPQeEt3OCWzfj4QWWzcOI3ICoCH6
+        7eh2UGB7Tos9Q4urG4cROQHQEF0nPhjdTgpsj4cELbZuDEbkBEDDVAsEnRfdjgpsXa0LYHXAxdWNwYic
+        AGiofjg8KwBm7wWhxdRt/xE5AdBwPSqujG6HBbbmkrhlaP51239ETgA0ZM+MbocFtq4uttX8uzy67T+a
+        N4c0ZMdFt9MCW3NF3Ck03y6KbvuP5uSQhqwWMHljdDsusDV/EZpv/xLdth/NK0Iatr3ipOh2XmBr7hOa
+        X++JbruP5uiQhq6+CfD4YJidt4Xm1wnRbffR3DukSfTkqN8wux0Z2LivxP6h+VQPYeq2+0gujVqATZpM
+        9cb6anQ7NLBxh4fm001i9A8rfxnS5LpHfCa6nRrYmKeE5lcdYLvtPgq//2uy3TDeEd2ODezer4bm11HR
+        bfcRfDluENJkq4sDnxp+EoDNe3Fofl0zPh3dtl+23whpJbp7fCq6HR3oPT00354U3bZfpovjFiGtTHU1
+        64uirm7udnpgZw8Mzbdax2S0x5w/O6SV7OB4d3Q7PrBDXaF+49D8q6WXR/mZ8rTYJ6SV7iejnoHevQlg
+        3f1daHHVHRfdOCzShXGbkNaia0Xd6uKWQdjZY0OLrS6868ZiES6LI0Nau+orryfEmdG9OWCdnBV1cqzF
+        tmcs4+Fm9fPDQ0Na6+qCnEfFqdG9UWDVXRku/ltedevysdGNzTzU1/5WfJS+rTvGq+P86N44sIp+PbT8
+        6hqli6Ibo1mpC/785i/tolqs4wHxhjgvujcSrIL6+rm+htYYHRSnRDdW21H3+detfq72lzZR/URwt/iV
+        +Juop2V1bzCYkq/F86O+ftZ4HRazuHX5kqgLDS3yI82gOoOuBw/VcsOvjffHl6J788Fo6sBfnzBvFxq/
+        Q+KYOCO68ezUh5R66FDd7WRtf2kB1QIqd426svZnoz5d1Zn3SfHb8RZYkvqa/7h4dNwsNM1uGg+KZ8ar
+        4vVR41tzzCviiXHv8Dx/SZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIk
+        SZIkSZIkSZIkSZIkSZIkSZI0r65xjf8PNyNO3csS6BQAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="MenuStrip3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>519, 17</value>
+  </metadata>
   <metadata name="MenuStrip3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>519, 17</value>
   </metadata>
